нашла и исправила много мелких, но важных ошибок при загрузке данных из файла, добавлении в него и изменении. Натолкнулась на ошибку при удалении, с которой все не так просто.